--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "author": "Vincent <vincent@fullstack.pro>",
     "version": "0.0.1",
     "description": "Lovejs cupidon client",
-    "main": "src/index.js",
+    "main": "index.js",
     "keywords": ["lovejs", "cupidon", "lovejs cupidon client"],
     "license": "MIT",
     "homepage": "http://lovejs.io/",
