--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-react", ["@babel/preset-stage-0", { "decoratorsLegacy": true }]],
+    "presets": [
+        "@babel/preset-env",
+        "@babel/preset-react",
+        ["@babel/preset-stage-0", { "decoratorsLegacy": true, "pipelineProposal": "minimal" }]
+    ],
     "plugins": ["syntax-dynamic-import"]
 }
